# bicycle_hire_api

./: .env.example  .gitlab-ci.yml  Dockerfile  Dockerfile.test  README.md  conftest.py  docker-compose.yml  factories.py  pyproject.toml  requirements.txt
apps/: urls.py
apps/accounts/: forms.py  serializers.py  urls.py  views.py
apps/accounts/tests/: test_models.py
apps/bicycles/: admin.py  apps.py  managers.py  serializers.py  tasks.py  views.py
apps/bicycles/schema/: schema.py  serializers.py
apps/bicycles/tests/: test_models.py  test_serializers.py  test_views.py
bicycle_hire_api/: config.py  settings.py  test_settings.py  urls.py
nginx/: Dockerfile  bicycle_hire.conf
src/: manage.py  pytest.ini
src/apps/accounts/: admin.py  manager.py  models.py  signals.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/accounts/schema/: schema.py
src/apps/accounts/tests/: test_integration.py
src/apps/bicycles/: models.py  urls.py
src/apps/bicycles/migrations/: 0001_initial.py
src/apps/bicycles/schema/: schema.py
src/apps/bicycles/tests/: test_integration.py  test_views.py
src/bicycle_hire_api/: asgi.py  celery.py  config.py  settings.py  test_settings.py  wsgi.py
src/templates/email/: rental_ended.html  rental_ended.txt
templates/email/: user_reset_password.html
